# icarus-world-editor

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.svelte  app.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/prospect/: backup.rs  diff.rs  domain.rs  envelope.rs  error.rs  mod.rs  property_engine.rs  types.rs
src-tauri/src/server/: launcher.rs  mod.rs  steam.rs
src/lib/: api.ts  helpers.ts  types.ts
src/lib/components/: ComponentList.svelte  DiffView.svelte  InventoryEditor.svelte  MetadataEditor.svelte  PropertyNode.svelte  PropertyTree.svelte  ProspectCard.svelte  ServerPanel.svelte
src/lib/stores/: config.ts  prospects.ts
