[package]
name = "icarus-prospect-editor"
version = "0.1.0"
description = "ICARUS Prospect File Manager and Editor"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
base64 = "0.22"
flate2 = "1.0"
sha1 = "0.10"
byteorder = "1.5"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
